--- a/index.html
+++ b/index.html
@@ -27,25 +27,26 @@
         <!-- /navbar -->
         <!-- section intro  -->
 
-          <!-- Header -->
-    <header>
+
+      <!-- main -->
+    <main>
+       
         <section class="intro">
-            <h2>Hi, I'm Mitul!</h2>
+            <h2>Yerrr what's good  you know who it is, it's ya boiiii Mitilis</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt at laboriosam saepe aut id ullam eligendi dolores? Modi pariatur consequatur, quia quis, culpa animi iusto nobis odio fugiat eum, impedit amet dolorem ipsum vel ex!</p>
         </section>
         <!-- /intro -->
-    </header>
-    <!--  /header -->
-    <!-- main -->
-    <main>
+  
         <!-- section projects -->
+       <h3>Here are some of my projects:</h3>
         <section id="projects">
-            <h3>Here are some of my projects:</h3>
+            
             <!-- projects container -->
             <div class="project-container">
                 <!-- first -->
                 <div class="project project-one">
+                    <p class="project-name">PROJECT NAME</p>
                     <div class="project-picture">
                         <img src="" alt="PROJECT NAME">
                     </div>
